FO-1863: Fikser layout issues på mobil.

--- a/src/components/stillingsinfo/StillingInfo.less
+++ b/src/components/stillingsinfo/StillingInfo.less
@@ -1,5 +1,6 @@
 .stillingContainer {
   display: flex;
+  flex: none;
   flex-direction: column;
   margin-top: 1rem;
 
